<resources>
    <string name="app_name">Rutas Moteras</string>

    <!-- Sobre mí y descripción -->
    <string name="sobre_mi_title">Sobre mí</string>
    <string name="sobre_mi_desc">¡Hola a todos! Soy Ivan Cabrera, un estudiante apasionado en mi segundo año del ciclo superior de Desarrollo de Aplicaciones Multiplataforma (DAM), ya titulado en Desarrollo de Aplicaciones Web (DAW). Desde siempre, he sentido una fascinación por las motos y la increíble sensación de libertad y aventura que nos brindan. Me encanta explorar nuevas rutas en moto y vivir experiencias únicas.</string>
    <string name="parrafo2">RutasMoteras va más allá de ser una simple plataforma, es un espacio creado exclusivamente para los amantes de las motos que buscan descubrir emocionantes rutas y compartir sus experiencias con una comunidad apasionada. Aquí encontrarás un amplio catálogo de rutas, podrás planificar tus propios viajes y experimentar lo mismo que tus compañeros de aventura han sentido.</string>

    <string name="parrafo3">Ya seas un novato en el mundo de las motos o un veterano experimentado, en RutasMoteras todos son bienvenidos. Únete a nosotros y embárcate en una aventura llena de emoción, camaradería y descubrimiento. ¡Prepárate para explorar el mundo sobre dos ruedas!</string>

    <!-- Texto de licencia -->
    <string name="licencia_desc">This work is licensed under a Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License.</string>
    <string name="licencia_url">http://creativecommons.org/licenses/by-nc-nd/4.0/</string>

    <string name="mensaje_inicial">Descubre emocionantes rutas en moto, comparte tus aventuras y únete a una comunidad apasionada de motociclistas.</string>
    <string name="mensaje_inicial2">¡Empieza a explorar hoy mismo!</string>

    <string name="logout">Cerrar Sesión</string>
    <string name="etitarUsu">Editar Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="fecha">Fecha</string>
    <string name="correo">Tu email</string>
    <string name="invitado">Invitado</string>
    <string name="iniSesion">Iniciar Sesión</string>
    <string name="registrar">Crear Usuario</string>
    <string name="cancelar">Cancelar</string>
    <string name="crear">Crear</string>
    <string name="masInfo">Más Información</string>
    <string name="filtros">Filtros</string>
    <string name="guiausu">Guía de Usuario</string>
    <string name="masNuevos">Más Nuevos</string>
    <string name="comAuto">Comunidad Autónoma</string>
    <string name="tipoMoto">Tipo de Moto</string>
    <string name="siguiente">Siguiente</string>
    <string name="deportiva">Deportiva</string>
    <string name="gt">Gran Turismo</string>
    <string name="contacta">Contacta Con Nosotros</string>
    <string name="SinRutas">Aún no has creado ninguna ruta!!!</string>
    <string name="ErrorServidor">Ha habido un problema con el servidor, sentimos las molestias</string>
    <string name="visitar">Ver Usuario</string>
    <string name="addRuta">Crear Ruta</string>
    <string name="name">Nombre</string>
    <string name="email">Correo Electrónico</string>
    <string name="message">Mensaje</string>
    <string name="send">Enviar</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="borrarFiltro">Eliminar Filtro</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="creacion">Creación de Ruta</string>


    <string name="errorCorreo">Error al enviar el correo</string>
    <string name="correoEnviado">Correo Enviado</string>
    <string name="correoEnviadoCorrectamente">Tu mensaje ha sido enviado con éxito!</string>
    <string name="enviandoCorreo">Enviando Correo</string>
    <string name="esperarEnviandoCorreo">Por favor, espere mientras se envía el correo...</string>
    <string name="errorImagen">Error al obtener la imagen</string>
    <string name="imagenNoSeleccionada">Imagen no seleccionada</string>
    <string name="hacerFoto">Hacer Foto</string>
    <string name="seleccionarDeGaleria">Seleccionar de la galería</string>
    <string name="elegirOpcion">Elige una opción</string>
    <string name="nuevaFoto">Nueva Foto</string>
    <string name="debePonerNombre">Debe ingresar un nombre</string>

    <string name="menosDe25Caracteres">No se aceptan más de 25 caracteres</string>
    <string name="debePonerApellidos">Debe ingresar los apellidos</string>
    <string name="menosDe50Caracteres">No se aceptan más de 50 caracteres</string>
    <string name="emailVacio">El campo de email no puede estar vacío</string>
    <string name="contraseñaVacia">El campo de contraseña no puede estar vacío</string>
    <string name="emailValido">Ingrese un email válido</string>

    <string name="contra8Caracteres">La contraseña debe tener al menos 8 caracteres.</string>
    <string name="contraNumeros">La contraseña debe contener al menos un número.</string>
    <string name="contraMinuscula">La contraseña debe contener al menos una letra minúscula.</string>
    <string name="contraMayuscula">La contraseña debe contener al menos una letra mayúscula.</string>
    <string name="contraEspecial">La contraseña debe contener al menos un símbolo especial (@#$%^&amp;+=).</string>
    <string name="contraEspacios">La contraseña no debe contener espacios.</string>
    <string name="vasABorrarRuta">Vas a borrar una ruta</string>
    <string name="EstasSeguroDeBorrarRuta">¿Estás seguro de que quiers hacerlo?</string>


    <string name="borrarFoto">Borrar Foto</string>
    <string name="editarUsuario">Editar Usuario</string>
    <string name="editarRuta">Editar Ruta</string>
    <string name="rutas">Rutas</string>
    <string name="usuarios">Usuarios</string>

    <string name="crearUsuario">Crear Usuario Admin</string>

    <string name="noti1">Ruta creada!!!🎉</string>
    <string name="noti2">Gracias por usar mi aplicación. Disfrutala!.</string>
    <string name="crearSuperUser">Crear Super Usuario</string>
    <string name="errorValidacion">No puede haber elementos vacios!</string>
    <string name="guia">Guia de uso</string>
    <string name="descripcionrutasmoteras">Cuando veamos este texto en la parte superior de la pantalla significa que cuando pulsemos sobre el nos llevará al inicio \nPulsa en el video de abajo para reproducirlo y ver un ejemplo de uso</string>


    <string-array name="tipo_moto_array">
        <item>Scooter</item>
        <item>Custom</item>
        <item>Trail</item>
        <item>Deportiva</item>
        <item>Naked</item>
        <item>Motocross</item>
        <item>Gran Turismo</item>
    </string-array>

    <string-array name="comunidad_array">
        <item>Andalucía</item>
        <item>Aragón</item>
        <item>Asturias</item>
        <item>Islas Baleares</item>
        <item>Islas Canarias</item>
        <item>Cantabria</item>
        <item>Castilla León</item>
        <item>Castilla La Mancha</item>
        <item>Cataluña</item>
        <item>Comunidad Valenciana</item>
        <item>Extremadura</item>
        <item>Galicia</item>
        <item>Madrid</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>País Vasco</item>
        <item>La Rioja</item>
        <item>Ceuta</item>
        <item>Melilla</item>
    </string-array>

    <string name="titDialogo">Éxito🥳🥳🥳</string>
    <string name="cuerpoDialogo">¡Ruta creada exitosamente!</string>
    <string name="codigoPostal">Código Postal</string>
    <string name="ciudad">Ciudad - Pueblo</string>
    <string name="seleccionarFoto">Seleccionar Foto</string>
    <string name="guardar">Guardar</string>


    <string name="channel_name">Notificaciones de Creación de Rutas</string>
    <string name="channel_description">Notificaciones para informar sobre la creación de rutas</string>
</resources>